--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@ footer {
 <h2 id="Til toppen"></h2> 
 <section>
   <nav>
-    <img src=Pictures/logo-01.png alt="Logo B" width="300" height="300">
+    <img src=logo-01.png alt="Logo B" width="300" height="300">
     <p></p>
-        <img src=Pictures/Baard%20Salvesen-01.png alt="Baard Salvesen" width="300" height="300"> 
+        <img src=Baard%20Salvesen-01.png alt="Baard Salvesen" width="300" height="300"> 
 <h3>Egenskaper</h3>
-      <img src="Pictures/palette.png" width="50" height="50">  
+      <img src="palette.png" width="50" height="50">  
       <p><p3>Kreativ</p3></p>
-      <img src="Pictures/lightbulb.png" width="50" height="50">  
+      <img src="lightbulb.png" width="50" height="50">  
       <p><p3>Tilpasningsdyktig</p3></p>
-     <img src="Pictures/heart-2.png" width="50" height="50">  
+     <img src="heart-2.png" width="50" height="50">  
       <p><p3>Dedikert</p3></p>
-     <img src="Pictures/fireworks.png" width="50" height="50">  
+     <img src="fireworks.png" width="50" height="50">  
       <p><p3>Gledesspreder</p3></p>
 <h3>Ferdigheter</h3>
       <img src="Pictures/Fem%20stjerner-01.png" height="30">  
