--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ footer {
   <nav>
     <img src=logo-01.png alt="Logo B" width="300" height="300">
     <p></p>
-        <img src=Baard%20Salvesen-01.png alt="Baard Salvesen" width="300" height="300"> 
+        <img src=https://github.com/baardsalvesen/oppgave-DKDM1200-1-20V/blob/master/Baard%20Salvesen-01.png alt="Baard Salvesen" width="300" height="300"> 
 <h3>Egenskaper</h3>
       <img src="palette.png" width="50" height="50">  
       <p><p3>Kreativ</p3></p>
