--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ footer {
   <nav>
     <img src=logo-01.png alt="Logo B" width="300" height="300">
     <p></p>
-        <img src="https://github.com/baardsalvesen/oppgave-DKDM1200-1-20V/blob/master/Baard%20Salvesen-01.png" alt="Baard Salvesen" width="300" height="300"> 
+        <img src=Baard Salvesen-01.png" alt="Baard Salvesen" width="300" height="300"> 
 <h3>Egenskaper</h3>
       <img src="palette.png" width="50" height="50">  
       <p><p3>Kreativ</p3></p>
@@ -97,22 +97,22 @@ footer {
      <img src="fireworks.png" width="50" height="50">  
       <p><p3>Gledesspreder</p3></p>
 <h3>Ferdigheter</h3>
-      <img src="Pictures/Fem%20stjerner-01.png" height="30">  
+      <img src="Fem%20stjerner-01.png" height="30">  
       <p><p3>Adobe Illustrator</p3></p>
-      <img src="Pictures/Fire%20stjerner-01.png" height="30">  
+      <img src="Fire%20stjerner-01.png" height="30">  
       <p><p3>Adobe Indesign</p3></p>
-      <img src="Pictures/tre%20stjerner-01.png" height="30">  
+      <img src="tre%20stjerner-01.png" height="30">  
       <p><p3>Adobe Photoshop</p3> </p>
-      <img src="Pictures/tre%20stjerner-01.png" height="30">  
+      <img src="tre%20stjerner-01.png" height="30">  
       <p><p3>Adobe Premier</p3></p>
-      <img src="Pictures/tre%20stjerner-01.png" height="30">  
+      <img src="tre%20stjerner-01.png" height="30">  
       <p><p3>Wirecast</p3></p>
-      <img src="Pictures/tre%20stjerner-01.png" height="30">  
+      <img src="tre%20stjerner-01.png" height="30">  
       <p><p3>Wordpress</p3></p>
 <h3>Språk</h3>
-      <img src="Pictures/norway.png" width="50" height="50">  
+      <img src="norway.png" width="50" height="50">  
       <p><p3>Norsk: <b>Utmerket</b></p3></p>
-      <img src="Pictures/united-kingdom.png" width="50" height="50">  
+      <img src="united-kingdom.png" width="50" height="50">  
       <p><p3>Engelsk: <b>Solid</b></p3></p>
   </nav>
   
