--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ footer {
 </section>
 
 <footer>
-    <img src=Pictures/logo%20hel.png alt="Logo Baard Salvesen">
+    <img src=logo%20hel.png alt="Logo Baard Salvesen">
     
     <h1 id="Kontakt meg">Kontakt meg</h1>
 <form>
