--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   padding: 16px;
   font-size: 16px;}   
 .topnav a:hover {
-  background-color: #dddddd;
+  background-color: #ffffff;
   color: white;}
 body {
   font-family: Gill sans, sans-serif;
