--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   color: #f2f2f2;
   text-align: center;
   text-decoration: none;
-  padding: 16px;
+  padding: 16px, 16px;
   font-size: 16px;}   
 .topnav a:hover {
-  background-color: #ffffff;
+  background-color: #800020;
   color: white;}
 body {
   font-family: Gill sans, sans-serif;
