--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   width: 100%;}
     
 .topnav a {
-  color: #f2f2f2;
+  color: #170700;
   text-align: center;
   text-decoration: none;
-  padding: 16px, 20px;
+  padding: 20px, 20px;
   font-size: 16px;}   
 .topnav a:hover {
   background-color: #800020;
