--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@ footer {
         <a class="#Til toppen" href="#Til toppen" >Til toppen </a>
         <a href="#Arbeidserfaring">Arbeidserfaring </a>
         <a href="#verv">Verv </a>
-        <a href="#Utdanning">Utdanning</a>
-        <a href="#Annen erfaring">Annen erfaring</a>
-        <a href="#Kontakt meg">Kontakt meg</a>
+        <a href="#Utdanning">Utdanning </a>
+        <a href="#Annen erfaring">Annen erfaring </a>
+        <a href="#Kontakt meg">Kontakt meg </a>
+        <a href="#Til toppen" >Til toppen </a>
     </div>
 <h2 id="Til toppen"></h2> 
 <section>
