--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   font-size: 16px;}   
 .topnav a:hover {
   background-color: #800020;
-  color: white;}
+  color: #ffffff;}
 body {
   font-family: Gill sans, sans-serif;
     max-width: 900px
