--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ footer {
 </section>
 
 <footer>
-    <img src="logo%20hel.png alt="Logo Baard Salvesen">
+    <img src="logo hel.png" alt="Logo Baard Salvesen">
     
     <h1 id="Kontakt meg">Kontakt meg</h1>
 <form>
