--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   width: 100%;}
     
 .topnav a {
-  color: #170700;
+  color: #ffffff;
   text-align: center;
   text-decoration: none;
   padding: 20px, 20px;
